eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/redirect-http-to-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: http
    - name: public
      sectionName: http-root
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
