eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_argo-workflows.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-route-argo-workflows
  namespace: argocd
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: cilium
  to:
    - group: ""
      kind: Service
      name: argocd-workflows-argo-workflows-server
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - argo-workflows-rp.hauptmann.dev
  rules:
    - backendRefs:
        - name: argocd-workflows-argo-workflows-server
          namespace: argocd
          port: 2746
