eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_argocd.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-route
  namespace: argocd
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: cilium
  to:
    - group: ""
      kind: Service
      name: argocd-server
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - argo-rp.hauptmann.dev
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
