eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_audiobookstack.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: audiobookshelf
spec:
  ports:
    - port: 30067
      targetPort: 30067
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: audiobookshelf-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: audiobookshelf
    kubernetes.io/service-name: audiobookshelf-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30067
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - audiobookshelf.hauptmann.dev
  rules:
    - backendRefs:
        - name: audiobookshelf-external
          port: 30067
