eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_authentik.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: authentik
spec:
  ports:
    - port: 30140
      targetPort: 30140
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: authentik-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: authentik
    kubernetes.io/service-name: authentik-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30140
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - auth.hauptmann.dev
  rules:
    - backendRefs:
        - name: authentik-external
          port: 30140
