eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_bambuddy.yaml
apiVersion: v1
kind: Service
metadata:
  name: bambuddy-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: bambuddy
spec:
  ports:
    - port: 30669
      targetPort: 30669
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: bambuddy-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: bambuddy
    kubernetes.io/service-name: bambuddy-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30669
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bambuddy
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - bambuddy.hauptmann.dev
  rules:
    - backendRefs:
        - name: bambuddy-external
          port: 30669
