eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_bookstack.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: bookstack
spec:
  ports:
    - port: 30214
      targetPort: 30214
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: bookstack-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: bookstack
    kubernetes.io/service-name: bookstack-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30214
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookstack
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - bookstack.hauptmann.dev
  rules:
    - backendRefs:
        - name: bookstack-external
          port: 30214
