eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_dockhand.yaml
apiVersion: v1
kind: Service
metadata:
  name: dockhand-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: dockhand
spec:
  ports:
    - port: 30328
      targetPort: 30328
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: dockhand-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: dockhand
    kubernetes.io/service-name: dockhand-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30328
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dockhand
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - dockhand.hauptmann.dev
  rules:
    - backendRefs:
        - name: dockhand-external
          port: 30328
