eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_firefly-iii.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: firefly-iii
spec:
  ports:
    - port: 30666
      targetPort: 30666
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: firefly-iii-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: firefly-iii
    kubernetes.io/service-name: firefly-iii-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30666
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-iii
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - firefly-iii.hauptmann.dev
  rules:
    - backendRefs:
        - name: firefly-iii-external
          port: 30666
