eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_gitea.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: gitea
spec:
  ports:
    - port: 30008
      targetPort: 30008
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: gitea-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: gitea
    kubernetes.io/service-name: gitea-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30008
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - git.hauptmann.dev
  rules:
    - backendRefs:
        - name: gitea-external
          port: 30008
