eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_home-assistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  ports:
    - port: 30123
      targetPort: 30123
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: home-assistant
    kubernetes.io/service-name: home-assistant-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30123
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - home.hauptmann.dev
  rules:
    - backendRefs:
        - name: home-assistant-external
          port: 30123
