eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_immich.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: immich
spec:
  ports:
    - port: 30041
      targetPort: 30041
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: immich-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: immich
    kubernetes.io/service-name: immich-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30041
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - immich.hauptmann.dev
  rules:
    - backendRefs:
        - name: immich-external
          port: 30041
