eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  ports:
    - port: 30013
      targetPort: 30013
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: jellyfin
    kubernetes.io/service-name: jellyfin-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30013
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - jellyfin.hauptmann.dev
  rules:
    - backendRefs:
        - name: jellyfin-external
          port: 30013
