eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_jellystat.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellystat-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: jellystat
spec:
  ports:
    - port: 30176
      targetPort: 30176
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellystat-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: jellystat
    kubernetes.io/service-name: jellystat-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30176
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellystat
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - jellystat.hauptmann.dev
  rules:
    - backendRefs:
        - name: jellystat-external
          port: 30176
