eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_kargo.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-route
  namespace: kargo
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: cilium
  to:
    - group: ""
      kind: Service
      name: kargo-api
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kargo
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - kargo.hauptmann.dev
  rules:
    - backendRefs:
        - name: kargo-api
          namespace: kargo
          port: 80
