eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_keycloak.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-route
  namespace: keycloak
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: cilium
  to:
    - group: ""
      kind: Service
      name: keycloak-service
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - auth.hauptmann.dev
  rules:
    - backendRefs:
        - name: keycloak-service
          namespace: keycloak
          port: 8080
