eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_lidarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: lidarr
spec:
  ports:
    - port: 30071
      targetPort: 30071
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: lidarr-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: lidarr
    kubernetes.io/service-name: lidarr-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30071
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - lidarr.hauptmann.dev
  rules:
    - backendRefs:
        - name: lidarr-external
          port: 30071
