eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_linkding.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: linkding
spec:
  ports:
    - port: 30044
      targetPort: 30044
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: linkding-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: linkding
    kubernetes.io/service-name: linkding-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30044
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkding
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - links.hauptmann.dev
  rules:
    - backendRefs:
        - name: linkding-external
          port: 30044
