eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_n8n.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: n8n
spec:
  ports:
    - port: 30109
      targetPort: 30109
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: n8n-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: n8n
    kubernetes.io/service-name: n8n-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30109
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - n8n.hauptmann.dev
  rules:
    - backendRefs:
        - name: n8n-external
          port: 30109
