eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_navidrome.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: navidrome
spec:
  ports:
    - port: 30043
      targetPort: 30043
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: navidrome-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: navidrome
    kubernetes.io/service-name: navidrome-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30043
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - navidrome.hauptmann.dev
  rules:
    - backendRefs:
        - name: navidrome-external
          port: 30043
