eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_opencloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencloud-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: opencloud
spec:
  ports:
    - port: 30980
      targetPort: 30980
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: opencloud-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: opencloud
    kubernetes.io/service-name: opencloud-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30980
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencloud
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - cloud.hauptmann.dev
  rules:
    - backendRefs:
        - name: opencloud-external
          port: 30980
---
apiVersion: v1
kind: Service
metadata:
  name: opencloud-wopi-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: opencloud
spec:
  ports:
    - port: 30981
      targetPort: 30981
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: opencloud-wopi-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: opencloud
    kubernetes.io/service-name: opencloud-wopi-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30981
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencloud-wopi
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - wopiserver.hauptmann.dev
  rules:
    - backendRefs:
        - name: opencloud-wopi-external
          port: 30981
---
apiVersion: v1
kind: Service
metadata:
  name: opencloud-collabora-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: opencloud
spec:
  ports:
    - port: 30982
      targetPort: 30982
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: opencloud-collabora-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: opencloud
    kubernetes.io/service-name: opencloud-collabora-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30982
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencloud-collabora
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - collabora.hauptmann.dev
  rules:
    - backendRefs:
        - name: opencloud-collabora-external
          port: 30982
