eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_opengym.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengym-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: opengym
spec:
  ports:
    - port: 30781
      targetPort: 30781
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: opengym-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: opengym
    kubernetes.io/service-name: opengym-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30781
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opengym
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - execise.hauptmann.dev
  rules:
    - backendRefs:
        - name: opengym-external
          port: 30781
