eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_paperless.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: paperless
spec:
  ports:
    - port: 30070
      targetPort: 30070
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: paperless-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: paperless
    kubernetes.io/service-name: paperless-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30070
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - paperless.hauptmann.dev
  rules:
    - backendRefs:
        - name: paperless-external
          port: 30070
