eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_pocketid.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketid-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: pocketid
spec:
  ports:
    - port: 30411
      targetPort: 30411
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pocketid-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: pocketid
    kubernetes.io/service-name: pocketid-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30411
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocketid
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - id.hauptmann.dev
  rules:
    - backendRefs:
        - name: pocketid-external
          port: 30411
