eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_radarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: radarr
spec:
  ports:
    - port: 30025
      targetPort: 30025
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: radarr-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: radarr
    kubernetes.io/service-name: radarr-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30025
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - radarr.hauptmann.dev
  rules:
    - backendRefs:
        - name: radarr-external
          port: 30025
