eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_seerr.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: seerr
spec:
  ports:
    - port: 30357
      targetPort: 30357
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: seerr-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: seerr
    kubernetes.io/service-name: seerr-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30357
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - seerr.hauptmann.dev
  rules:
    - backendRefs:
        - name: seerr-external
          port: 30357
