eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_super-intelligence-mcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: super-intelligence-mcp-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: super-intelligence-mcp
spec:
  ports:
    - port: 30678
      targetPort: 30678
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: super-intelligence-mcp-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: super-intelligence-mcp
    kubernetes.io/service-name: super-intelligence-mcp-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30678
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: super-intelligence-mcp
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - simcp.hauptmann.dev
  rules:
    - backendRefs:
        - name: super-intelligence-mcp-external
          port: 30678
