eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_swiparr.yaml
apiVersion: v1
kind: Service
metadata:
  name: swiparr-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: swiparr
spec:
  ports:
    - port: 4321
      targetPort: 4321
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: swiparr-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: swiparr
    kubernetes.io/service-name: swiparr-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 4321
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: swiparr
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - swiparr.hauptmann.dev
  rules:
    - backendRefs:
        - name: swiparr-external
          port: 4321
