eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_umami.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: umami
spec:
  ports:
    - port: 30060
      targetPort: 30060
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: umami-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: umami
    kubernetes.io/service-name: umami-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30060
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: umami
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - umami.hauptmann.dev
  rules:
    - backendRefs:
        - name: umami-external
          port: 30060
