eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_uptime-kuma.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-route
  namespace: uptime-kuma
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: cilium
  to:
    - group: ""
      kind: Service
      name: uptime-kuma
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - status.hauptmann.dev
  rules:
    - backendRefs:
        - name: uptime-kuma
          namespace: uptime-kuma
          port: 3001
