eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_vaultwarden.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-external
  namespace: cilium
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  ports:
    - port: 30032
      targetPort: 30032
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: vaultwarden-external-1
  namespace: cilium
  labels:
    app.kubernetes.io/name: vaultwarden
    kubernetes.io/service-name: vaultwarden-external
    endpointslice.kubernetes.io/managed-by: argocd
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 30032
endpoints:
  - addresses:
      - 192.168.0.129
    conditions: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - vault.hauptmann.dev
    - passwords.hauptmann.dev
  rules:
    - backendRefs:
        - name: vaultwarden-external
          port: 30032
