eggenberg-talos-cluster-1/argocd-apps-configuration/cilium-gateway/service_zot.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-route
  namespace: zot
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: cilium
  to:
    - group: ""
      kind: Service
      name: zot
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zot
  namespace: cilium
spec:
  parentRefs:
    - name: public
      sectionName: https
  hostnames:
    - registry.hauptmann.dev
  rules:
    - backendRefs:
        - name: zot
          namespace: zot
          port: 5000
